log/error.log
/var/www/pratos/node_modules/pratos_style_class/index.js:22
client.on'(connect_timeout',function(){console.llg('er');});
         ^^^^^^^^^^^^^^^^^^
SyntaxError: Unexpected string
    at Object.exports.runInThisContext (vm.js:76:16)
    at Module._compile (module.js:542:28)
    at Object.Module._extensions..js (module.js:579:10)
    at Module.load (module.js:487:32)
    at tryModuleLoad (module.js:446:12)
    at Function.Module._load (module.js:438:3)
    at Module.require (module.js:497:17)
    at require (internal/module.js:20:19)
    at Object.<anonymous> (/var/www/pratos/server.js:26:13)
    at Module._compile (module.js:570:32)
